# DeepTrade

./: .gitignore  auditeur.py  circuit_breaker.py  dash_app.py  gemini_client.py  macro_strategist.py  prompt_builder.py  pyproject.toml  run_bot.sh  sentiment_analyst.py  sentinelle.py  sentinelle_daily_log.json  system_prompt.md
assets/: deeptrade.css
